# blogs

./: .gitignore  pyproject.toml
app/: main.py
app/auth/: interfaces.py
app/config/: database.yml.example  development.yml.example  production.yml.example
app/core/: __init__.py  database.py  features.py  forms.py  logging.py  schemas.py  security.py  settings.py  static.py  templating.py
app/core/interfaces/: auth.py  user.py
app/core/templates/core/: base.html  header.html
app/crud/: authentication.py  users.py
app/endpoints/: blogs.py
app/features/auth/: decorators.py  forms.py  interfaces.py  middlewares.py  routes.py  security.py  views.py
app/features/auth/backends/: session.py
app/features/auth/templates/auth/: signup.html  signup_form.html
app/features/blog/: forms.py  routes.py  views.py
app/features/blog/templates/blog/: add_post_form.html  blog.html  home.html  profile.html
app/features/pages/: views.py
app/features/pages/templates/pages/: home.html
app/features/users/: crud.py  models.py  providers.py  schemas.py
app/forms/: signin.py  signup.py
app/models/: blogs.py
app/routes/: blogs.py
app/services/: auth_service.py  datetime_service.py
app/shared/: mixins.py
app/static/css/: style.css
app/static/js/: add_post.js
app/templates/base/: base.html  header.html
app/templates/blogs/: home.html
app/templates/forms/: add_post.html  signin.html  signup.html
app/templates/macros/: form_fields.html
app/templates/pages/: add_post.html  home.html  signin.html  signup.html
(+2 files in other folders)
