[project]
name = "blogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "bcrypt>=5.0.0",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.5",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "starlette-wtf>=0.4.5",
    "tzdata>=2025.3",
    "uvicorn>=0.38.0",
]
